k8n/overlays/dev/pgadmin/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
spec:
  rules:
    - http:
        paths:
          - path: /dev/pgadmin
            pathType: Prefix
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80
